[tool.poetry]
name = "incompletebinary"
version = "0.1.0"
description = ""
authors = ["Dave Cameron <dcameron@digitalocean.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
jupyter = "^1.0.0"
jupyterlab = "^4.0.0"
pymc = "^5.3.1"
numpy = "^1.24.3"
pandas = "^2.0.1"
arviz = "^0.15.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
